--- a/dbcreation/src/main/resources/application.properties
+++ b/dbcreation/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/anu
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/nmsdb
+spring.datasource.username=nmssupport
+spring.datasource.password=P@ssw0rd
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
